--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OleksandrYepishev/goit-js-hw-12.git"
+    "url": "git+https://github.com/OleksandrYepishev/goit-js-hw-12"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
